model description updated
