# doc/swagger.json
@@ -349,6 +349,9 @@
               "$ref": "#/definitions/Folder"
             }
           },
+          "400": {
+            "description": "Bad request"
+          },
           "401": {
             "description": "Unauthorized"
           },
@@ -496,7 +499,8 @@
             "description": "Token of the current user",
             "required": true,
             "type": "string"
-          },
+          }
+        ],
         "responses": {
           "200": {
             "description": "successful operation"
@@ -538,6 +542,10 @@
         "password": {
           "type": "string"
         },
+        "home": {
+          "type": "object",
+          "$ref": "#/definitions/Folder"
+        },
         "token": {
           "type": "string",
           "format": "uuid"
@@ -564,7 +572,7 @@
       "properties": {
         "id": {
           "type": "string",
-          "example": "uuid"
+          "format": "uuid"
         },
         "parent": {
           "type": "object",
@@ -622,7 +630,7 @@
       "properties": {
         "id": {
           "type": "string",
-          "example": "uuid"
+          "format": "uuid"
         },
         "parent": {
           "type": "object",
@@ -661,7 +669,7 @@
       "properties": {
         "id": {
           "type": "string",
-          "example": "uuid"
+          "format": "uuid"
         },
         "parent": {
           "type": "object",
@@ -681,7 +689,7 @@
       "properties": {
         "id": {
           "type": "string",
-          "example": "uuid"
+          "format": "uuid"
         }
       }
     }
